--- a/proyecto-reservas-bus/src/main/resources/application.properties
+++ b/proyecto-reservas-bus/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/db_venta_boletos
 spring.datasource.username=root
-spring.datasource.password=basedatos123
+spring.datasource.password=sasa
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=update
