Aumento de documentacion del proyecto
Se aumenta la documentación pertinente al proyecto

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 *.properties
 proyecto-reservas-bus/proyecto-reservas-bus/target/classes/application.properties
 proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/application.properties
+proyecto-reservas-bus/proyecto-reservas-bus/target/classes/META-INF/maven/com.nuevo.springboot.reservas.app/proyecto-reservas-bus/pom.properties
