--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 proyecto-reservas-bus/proyecto-reservas-bus/target/classes/application.properties
 proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/application.properties
 proyecto-reservas-bus/proyecto-reservas-bus/target/classes/META-INF/maven/com.nuevo.springboot.reservas.app/proyecto-reservas-bus/pom.properties
+proyecto-reservas-bus/proyecto-reservas-bus/.classpath
+*.properties
+*.properties
+*.properties
