--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/application.properties
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/db_venta_boletos
+spring.datasource.url = jdbc:mysql://localhost:3306/db_venta_boletos_2
 spring.datasource.username=RBoletos
 spring.datasource.password=RBoletos
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 
 
