--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/application.properties
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/db_venta_boletos_2
+spring.datasource.url = jdbc:mysql://localhost:3306/db_venta_boletos
 spring.datasource.username=RBoletos
 spring.datasource.password=RBoletos
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
