--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/application.properties
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/application.properties
@@ -3,7 +3,11 @@ spring.datasource.username=RBoletos
 spring.datasource.password=RBoletos
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 
 
+# braintree
+braintree.merchant-id=6r4m7bg9hqywzg3y
+braintree.public-key=kwpxv4nrwyzs9kyt
+braintree.private-key=a4db3da1970935c770f5adaa7ae04033
