--- a/proyecto-reservas-bus/proyecto-reservas-bus/pom.xml
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/pom.xml
@@ -14,7 +14,7 @@
     <name>proyecto-reservas-bus</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-        <java.version>17</java.version>
+     <java.version>1.8</java.version>
     </properties>  
     <dependencies>
 		<dependency>
@@ -39,6 +39,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+       		<dependency>
+			<groupId>com.braintreepayments.gateway</groupId>
+			<artifactId>braintree-java</artifactId>
+			<version>3.18.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
         <!-- Dependencia spring-boot-starter-security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
