--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/application.properties
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/db_venta_boletos
-spring.datasource.username=RBoletos
-spring.datasource.password=RBoletos
+spring.datasource.url = jdbc:mysql://localhost/db_venta_boletos
+spring.datasource.username=root
+spring.datasource.password=Cesarayala02
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=validate
@@ -18,8 +18,8 @@ braintree.private-key=a4db3da1970935c770f5adaa7ae04033
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.properties.mail.smtp.starttls.enable = true
-spring.mail.username=yukkicastelo@gmail.com
-spring.mail.password=foqz rail kemd rdnh
+spring.mail.username=ticketscompra97@gmail.com
+spring.mail.password=dkxq gsfd tjxn lazm
 spring.mail.properties.mail.smtp.starttls.required = true
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
