--- a/proyecto-reservas-bus/proyecto-reservas-bus/pom.xml
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/pom.xml
@@ -54,6 +54,24 @@
 			<version>3.18.0</version>
 		</dependency>
 		<dependency>
+    <groupId>com.paypal.sdk</groupId>
+    <artifactId>rest-api-sdk</artifactId>
+    <version>1.14.0</version>
+</dependency>
+ <!-- Dependencia de Gson -->
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.6</version>
+    </dependency>
+
+    <!-- Dependencia de dx-java -->
+    <dependency>
+        <groupId>com.mercadopago</groupId>
+        <artifactId>dx-java</artifactId>
+        <version>1.5.2</version>
+    </dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
