--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/application.properties
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.url = jdbc:mysql://localhost/db_venta_boletos
-spring.datasource.username=RBoletos
-spring.datasource.password=RBoletos
+spring.datasource.username=root
+spring.datasource.password=Cesarayala02
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 logging.level.org.hibernate.SQL=debug
 
 
